<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@id/RootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_pink"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_gravity="center_vertical"
        android:background="@drawable/topbar">

        <TextView
            android:id="@id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/cloud_backups"
            android:textColor="#ffffff"
            android:textSize="22sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="vertical"
            android:paddingTop="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/current_backup"
                android:textColor="#ba6e87"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/edt_backup_name"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:inputType="text"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_list_backups"
                android:layout_width="250dp"
                android:layout_height="44dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bn_community_round_rect_white_grey_state"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/list_backup"
                android:textColor="#ba6e87"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_backup_now"
                android:layout_width="250dp"
                android:layout_height="44dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bn_community_round_rect_white_grey_state"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/now_backup"
                android:textColor="#ba6e87"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txv_last_backup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/last_backup"
                android:textColor="#ba6e87"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:text="@string/auto_backup"
                    android:textColor="#ba6e87"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/btn_auto_backups_on"
                    android:layout_width="75dp"
                    android:layout_height="26dp"
                    android:background="@drawable/tableftdefault"
                    android:gravity="center"
                    android:text="@string/on"
                    android:textColor="#ffffff"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_auto_backups_off"
                    android:layout_width="75dp"
                    android:layout_height="26dp"
                    android:layout_marginTop="0dp"
                    android:background="@drawable/tabrightselected"
                    android:gravity="center"
                    android:text="@string/off"
                    android:textColor="#ffffff"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_reset_data"
                android:layout_width="250dp"
                android:layout_height="44dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/bn_community_round_rect_white_grey_state"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/reset_data"
                android:textColor="#ba6e87"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
