<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:id="@id/RootView"
        android:background="@drawable/background_pink"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:layout_gravity="center_vertical"
            android:background="@drawable/topbar"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_x="0dp"
            android:layout_y="0dp">

        <Button
                android:textSize="14dp"
                android:textStyle="bold"
                android:textColor="#ffffff"
                android:layout_gravity="center"
                android:id="@+id/weight"
                android:background="@drawable/tableftselected"
                android:layout_width="60dp"
                android:layout_height="36dp"
                android:layout_marginLeft="5dp"
                android:text="@string/weigth"/>

        <Button
                android:textSize="14dp"
                android:textStyle="bold"
                android:textColor="#ffffff"
                android:layout_gravity="center"
                android:id="@+id/waist"
                android:background="@drawable/tabrightdefault"
                android:layout_width="60dp"
                android:layout_height="36dp"
                android:text="@string/waist"/>

        <TextView
                android:textSize="22dp"
                android:textStyle="bold"
                android:textColor="#ffffff"
                android:gravity="center"
                android:layout_gravity="center"
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="34dp"
                android:text="@string/graphs"
                android:layout_weight="1.0"/>

        <Button
                android:textSize="14dp"
                android:textStyle="bold"
                android:textColor="#ffffff"
                android:layout_gravity="center"
                android:id="@+id/unit1"
                android:background="@drawable/tableftselected"
                android:layout_width="40dp"
                android:layout_height="36dp"
                android:text="@string/weight_lb"/>

        <Button
                android:textSize="14dp"
                android:textStyle="bold"
                android:textColor="#ffffff"
                android:layout_gravity="center"
                android:id="@+id/unit2"
                android:background="@drawable/tabrightdefault"
                android:layout_width="40dp"
                android:layout_height="36dp"
                android:layout_marginRight="5dp"
                android:text="@string/weight_kg"/>
    </LinearLayout>

    <LinearLayout
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:textSize="15dp"
                android:textColor="#aa536b"
                android:id="@+id/topText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/weigth_entered"/>

        <Button
                android:textSize="18dp"
                android:typeface="sans"
                android:textStyle="bold"
                android:textColor="#ba6e87"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:id="@+id/prePregnancy"
                android:background="@drawable/bn_community_round_rect_white_grey_state"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="15dp"
                android:text="@string/weight_pre_pregnant"/>

        <com.alt12.babybumpcore.GraphView
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:id="@+id/graph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"/>
    </LinearLayout>
</LinearLayout>
