<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@id/RootView"
    android:layout_width="-1"
    android:layout_height="-1"
    android:background="@drawable/background_pink"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="-1"
        android:layout_height="44dp"
        android:layout_gravity="center_vertical"
        android:background="@drawable/topbar">

        <TextView
            android:id="@id/title"
            android:layout_width="-1"
            android:layout_height="-2"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/search"
            android:textColor="#ffffff"
            android:textSize="22sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:layout_width="-1"
        android:layout_height="-2">

        <LinearLayout
            android:layout_width="-1"
            android:layout_height="-2"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="-2"
                android:layout_height="-2"
                android:layout_marginTop="10dp"
                android:gravity="center">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="-2"
                    android:layout_marginRight="10dp"
                    android:gravity="right"
                    android:text="@string/gender"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/btn_male"
                    android:layout_width="90dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/tableftselected"
                    android:gravity="center"
                    android:text="@string/male"
                    android:textColor="#ffffff"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_female"
                    android:layout_width="90dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="0dp"
                    android:background="@drawable/tabrightdefault"
                    android:gravity="center"
                    android:text="@string/female"
                    android:textColor="#ffffff"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="-2"
                android:layout_height="-2"
                android:layout_marginTop="15dp"
                android:gravity="center">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="-2"
                    android:layout_marginRight="10dp"
                    android:gravity="right"
                    android:text="@string/sounds"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="30dp"
                    android:layout_height="-2"
                    android:layout_marginRight="5dp"
                    android:gravity="right"
                    android:lines="2"
                    android:text="@string/start_with"
                    android:textColor="#000000"
                    android:textSize="11sp" />

                <EditText
                    android:id="@+id/edt_starts_with"
                    android:layout_width="50dp"
                    android:layout_height="-2"
                    android:layout_marginRight="5dp"
                    android:inputType="text"
                    android:singleLine="true" />

                <TextView
                    android:layout_width="30dp"
                    android:layout_height="-2"
                    android:layout_marginRight="5dp"
                    android:gravity="right"
                    android:lines="2"
                    android:text="@string/ends_with"
                    android:textColor="#000000"
                    android:textSize="11sp" />

                <EditText
                    android:id="@+id/edt_ends_with"
                    android:layout_width="50dp"
                    android:layout_height="-2"
                    android:inputType="text"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="-2"
                android:layout_height="-2"
                android:layout_marginTop="15dp"
                android:gravity="center"></LinearLayout>

            <Button
                android:id="@+id/btn_get_name"
                android:layout_width="240dp"
                android:layout_height="56dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/bn_community_round_rect_white_grey_state"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/get_names"
                android:textColor="#ba6e87"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
