<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@id/RootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_pink"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_gravity="center_vertical"
        android:background="@drawable/topbar">

        <TextView
            android:id="@id/title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/baby_names"
            android:textColor="#ffffff"
            android:textSize="22dp"
            android:textStyle="bold"
            android:typeface="sans" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_male"
            android:layout_width="80dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:background="@drawable/tableftselected"
            android:gravity="center"
            android:text="@string/male"
            android:textColor="#ffffff"
            android:textSize="12sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_female"
            android:layout_width="70dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_marginTop="0dp"
            android:background="@drawable/tabrightdefault"
            android:gravity="center"
            android:text="@string/female"
            android:textColor="#ffffff"
            android:textSize="12sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_popularity"
            android:layout_width="90dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:background="@drawable/tableftselected"
            android:gravity="center"
            android:text="@string/popularity"
            android:textColor="#ffffff"
            android:textSize="12sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_alpha"
            android:layout_width="80dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/tabrightdefault"
            android:gravity="center"
            android:text="@string/alpha"
            android:textColor="#ffffff"
            android:textSize="12sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ListView
        android:id="@+id/lsv_baby_names"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.0" />
</LinearLayout>
